@@ -1,5 +1,6 @@
 Revision history for Test-Harness
 
+        - Return handle for pipes and sockets #58 (Erik Huelsmann)
         - Spelling fixes (Brian Wightman)
 
 3.39    06-04-2017
